--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.6",
     "@planetscale/database": "^1.16.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@uploadthing/react": "^6.3.2",
     "drizzle-orm": "^0.29.4",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "openai": "^4.28.4",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "uploadthing": "^6.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
