remove annoying double quotes and can create cards now

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.6",
+    "@langchain/openai": "^0.0.15",
     "@planetscale/database": "^1.16.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -22,16 +23,22 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^6.3.2",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
+    "langchain": "^0.1.25",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.28.4",
     "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.1",
     "uploadthing": "^6.5.0",
+    "youtube-transcript": "^1.0.6",
+    "youtubei.js": "^9.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
