--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "app/*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
