--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.17.1",
     "@auth/drizzle-adapter": "^0.3.6",
+    "@google/generative-ai": "^0.2.1",
     "@langchain/openai": "^0.0.15",
+    "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.16.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -24,7 +27,7 @@
     "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^6.3.2",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.29.5",
     "langchain": "^0.1.25",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
