add dashboard page

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
-    "@uploadthing/react": "^6.3.2",
+    "@uploadthing/react": "^6.5.1",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
     "langchain": "^0.1.25",
@@ -35,12 +35,14 @@
     "node-fetch": "^3.3.2",
     "openai": "^4.28.4",
     "pdf-parse": "^1.1.1",
+    "pg": "^8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
-    "uploadthing": "^6.5.0",
+    "uploadthing": "^6.10.1",
+    "uuid": "^9.0.1",
     "youtube-transcript": "^1.0.6",
     "youtubei.js": "^9.1.0",
     "zod": "^3.22.4"
@@ -53,7 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "mysql2": "^3.6.1",
