upload card skeleton

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
     "langchain": "^0.1.25",
+    "nanoid": "^5.0.7",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "node-fetch": "^3.3.2",
