--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^6.5.1",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
     "langchain": "^0.1.25",
     "nanoid": "^5.0.7",
