--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@langchain/openai": "^0.0.15",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.16.0",
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
@@ -30,6 +31,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
+    "framer-motion": "^11.1.9",
     "langchain": "^0.1.25",
     "nanoid": "^5.0.7",
     "next": "^14.0.4",
@@ -47,7 +49,7 @@
     "uuid": "^9.0.1",
     "youtube-transcript": "^1.0.6",
     "youtubei.js": "^9.1.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
