--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^6.5.1",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
     "framer-motion": "^11.1.9",
     "langchain": "^0.1.25",
+    "lucide-react": "^0.378.0",
     "nanoid": "^5.0.7",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -44,7 +46,8 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.1",
     "uuid": "^9.0.1",
     "youtube-transcript": "^1.0.6",
