drawer kind of working mostly

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@langchain/openai": "^0.0.15",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.16.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -36,7 +37,7 @@
     "langchain": "^0.1.25",
     "lucide-react": "^0.378.0",
     "nanoid": "^5.0.7",
-    "next": "^14.0.4",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "node-fetch": "^3.3.2",
     "openai": "^4.28.4",
@@ -50,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.1",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.1",
     "youtube-transcript": "^1.0.6",
     "youtubei.js": "^9.1.0",
     "zod": "^3.23.8"
